--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,21 @@ build-backend = "hatchling.build"
 [project]
 name = "aiclient"
 version = "0.1.0"
-description = "A minimal, production-minded Python SDK for interacting with AI models."
+description = "A minimal, generic client for AI models (OpenAI, Anthropic, Google, xAI) with middleware support."
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
+keywords = ["ai", "llm", "client", "openai", "anthropic", "gemini"]
 authors = [
-  { name = "Antigravity", email = "antigravity@example.com" },
+  {name = "Avdhesh Singh Chouhan", email = "ai.avdhesh@gmail.com"},
 ]
 classifiers = [
-  "Programming Language :: Python :: 3",
+  "Development Status :: 3 - Alpha",
+  "Programming Language :: Python",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
-  "Development Status :: 3 - Alpha",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
   "httpx>=0.25.0",
