--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.1"
 description = "A minimal, generic client for AI models (OpenAI, Anthropic, Google, xAI) with middleware support."
 readme = "README.md"
 requires-python = ">=3.10"
-license = "MIT"
+license = "Apache-2.0"
 keywords = ["ai", "llm", "client", "openai", "anthropic", "gemini"]
 authors = [
   {name = "Avdhesh Singh Chouhan", email = "ai.avdhesh@gmail.com"},
