feat: release v0.2.0 (MCP, Semantic Cache, Resilience)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aiclient-llm"
-version = "0.1.2"
+version = "0.2.0"
 description = "A minimal, generic client for AI models (OpenAI, Anthropic, Google, xAI) with middleware support."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -25,6 +25,8 @@ dependencies = [
   "httpx>=0.25.0",
   "pydantic>=2.0",
   "python-dotenv",
+  "mcp>=1.0.0",
+  "numpy>=1.20.0",
 ]
 
 [project.optional-dependencies]
